@@ -1,7 +1,7 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 0.0-34
-Date: 2016-12-14
+Version: 0.0-35
+Date: 2017-02-14
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")  
 Description: Some very simple infrastructure for basis functions.
@@ -9,8 +9,8 @@ Depends: variables (>= 0.0-30)
 Imports: stats, polynom, Matrix, orthopolynom, methods
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2016-12-14 13:24:05 UTC; hothorn
+Packaged: 2017-02-14 13:08:11 UTC; hothorn
 Author: Torsten Hothorn [aut, cre]
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2016-12-14 17:23:25
+Date/Publication: 2017-02-14 16:21:06
